--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,10 @@
 .navbar {
-    width: 100%;
-    height: 100px;
-    background-color: black;
+    width: 80%;
+    height: 15vh;
+    background-color: #CCD5DF;
+    font: normal normal normal 32px/44px Mongolian Baiti;
+    display: flex;
+    align-items: center;
+    padding: 0 10%;
+    font-weight: 600;
 }
