--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -5,11 +5,23 @@
     position: relative;
 }
 
-.menu {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 40px;
-    cursor: pointer;
-    color: #4591E1;
+.dashboardcontent {
+    width: 100%;
+}
+
+.recentOrderRevenue {
+    width: 100%;
+    display: flex;
+}
+
+.recentorder {
+    width: 50%;
+    height: 300px;
+    background-color: aqua;
+}
+
+.monthlyRevenue {
+    width: 50%;
+    height: 300px;
+    background-color: beige;
 }
