--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,24 @@ button {
 .App {
   width: 100%;
 }
+
+.homecontent {
+  width: 100%;
+  display: flex;
+}
+
+.menu {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 40px;
+  cursor: pointer;
+  color: #4591E1;
+}
+
+.sameSide {
+  width: 80%;
+  padding: 0 10%;
+  height: 80vh;
+  position: relative;
+}
